<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RetirementCalcu" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aih-gk-gOA">
                                <rect key="frame" x="91" y="203.5" width="233" height="42"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Submit"/>
                                <connections>
                                    <action selector="didTapCalcu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Thl-vM-QMd"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="s0h-F4-DEq">
                                <rect key="frame" x="20" y="59" width="374" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="QHg-FO-KqI"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Dept" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="AM3-yx-FRl">
                                <rect key="frame" x="20" y="121.5" width="374" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="GUD-55-3FE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="the name is raj cse" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ClI-Er-YJx">
                                <rect key="frame" x="20" y="297.5" width="374" height="150"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="150" id="b9l-c6-0w0"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="AM3-yx-FRl" firstAttribute="top" secondItem="s0h-F4-DEq" secondAttribute="bottom" constant="22.5" id="5QU-P0-F7l"/>
                            <constraint firstItem="aih-gk-gOA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="Ams-z9-H8h"/>
                            <constraint firstItem="s0h-F4-DEq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="BdQ-TS-VEc"/>
                            <constraint firstItem="aih-gk-gOA" firstAttribute="top" secondItem="AM3-yx-FRl" secondAttribute="bottom" constant="42" id="Kgd-Mb-AxS"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AM3-yx-FRl" secondAttribute="trailing" constant="20" id="WMI-lH-0GK"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ClI-Er-YJx" secondAttribute="trailing" constant="20" id="YvM-I7-GR6"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="s0h-F4-DEq" secondAttribute="trailing" constant="20" id="a14-di-eNi"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aih-gk-gOA" secondAttribute="trailing" constant="90" id="dKg-A7-VpL"/>
                            <constraint firstItem="ClI-Er-YJx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="iwR-5v-e2v"/>
                            <constraint firstItem="ClI-Er-YJx" firstAttribute="top" secondItem="aih-gk-gOA" secondAttribute="bottom" constant="52" id="rIi-ZE-sqc"/>
                            <constraint firstItem="s0h-F4-DEq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="wN6-Cc-exM"/>
                            <constraint firstItem="AM3-yx-FRl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zWQ-Xn-G51"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="deptxtfld" destination="AM3-yx-FRl" id="ti7-ik-zzm"/>
                        <outlet property="nametxtfld" destination="s0h-F4-DEq" id="D7R-iU-TCD"/>
                        <outlet property="resultLabel" destination="ClI-Er-YJx" id="yfi-H8-VFW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-13.043478260869566" y="12.723214285714285"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
